--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "axios": "^1.6.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
